# westford

./: .gitignore  .travis.yml  README.md  build.gradle  build.gradle.kts  pom.xml  settings.gradle
bootstrap/: pom.xml
bootstrap/dispmanx/: pom.xml
bootstrap/drm.direct/: pom.xml
bootstrap/drm.direct/src/main/c/drmdirect/: CMakeLists.txt
bootstrap/drm.direct/src/main/c/drmdirect/src/: drmdirect.c
bootstrap/drm.indirect/: pom.xml
bootstrap/drm.indirect/src/main/c/drmindirect/: CMakeLists.txt
bootstrap/drm.indirect/src/main/c/drmindirect/cmake/Modules/: FindPAM.cmake
bootstrap/drm.indirect/src/main/c/drmindirect/src/: drmindirect.c  westmalle-launch.c
bootstrap/src/main/assembly/: linux-amd64.xml  linux-armv6.xml  linux-armv6hf.xml  linux-i586.xml  static.xml
bootstrap/src/main/resources/: logback.xml
bootstrap/x11/: pom.xml
bootstrap/x11.html5/: pom.xml
compositor/: build.gradle  build.gradle.kts  pom.xml
compositor/src/main/java/org/westford/: Signal.java  Signal.kt  Slot.java
compositor/src/main/java/org/westford/launch/: LifeCycleSignals.java  LifeCycleSignals.kt  Privileges.java  Privileges.kt
compositor/src/main/java/org/westford/nativ/: NativeFileFactory.java  NativeFileFactory.kt  NativeModule.java  NativeModule.kt
compositor/src/main/java/org/westford/tty/: Tty.java  Tty.kt  TtyFactory.java  TtyFactory.kt  TtyModule.java  TtyModule.kt  VtEnter.java  VtEnter.kt  VtLeave.java  VtLeave.kt
compositor/src/main/java/org/westmalle/: Slot.java
compositor/src/main/java/org/westmalle/launch/: LifeCycleSignals.java
compositor/src/main/java/org/westmalle/nativ/: NativeFileFactory.java
compositor/src/main/java/org/westmalle/tty/: Tty.java  VtEnter.java
compositor/src/main/kotlin/org/westford/: Signal.kt
compositor/src/main/kotlin/org/westford/launch/: Privileges.kt
compositor/src/main/kotlin/org/westford/nativ/: NativeFileFactory.kt  NativeModule.kt
compositor/src/main/kotlin/org/westford/tty/: Tty.kt  TtyFactory.kt  TtyModule.kt  VtEnter.kt  VtLeave.kt
compositor/src/main/resources/html5/: index.html  wayland.js
demo-clients/: weston-flower  weston-info  weston-simple-egl  weston-simple-shm  weston-smoke  weston-subsurfaces  weston-terminal
launch/: dependency-reduced-pom.xml  pom.xml
launch.drm.direct/: build.gradle  build.sh  pom.xml
launch.drm.direct/src/main/c/drmdirect/: Config.h.in
launch.drm.indirect/: build.gradle  build.sh  pom.xml
launch.drm.indirect/src/main/c/drmindirect/: CMakeLists.txt
launch.drm.indirect/src/main/c/drmindirect/src/: westford-launch.c
launch.x11/: build.gradle  pom.xml
launch/dispmanx/: pom.xml
launch/drm.direct/: build.sh  pom.xml
launch/drm.direct/src/main/c/drmdirect/: CMakeLists.txt
launch/drm.direct/src/main/c/drmdirect/src/: drmdirect.c  westford-drmdirect.c
launch/drm.indirect/: build.sh  pom.xml
launch/drm.indirect/src/main/c/drmindirect/: CMakeLists.txt
launch/drm.indirect/src/main/c/drmindirect/src/: westford-launch.c  westford-launch.h  westmalle-launch.c  westmalle-launch.h
launch/x11/: pom.xml
launch/x11.html5/: pom.xml
wayland/: pom.xml
wayland/src/main/java/org/westmalle/: Signal.java
wayland/src/main/java/org/westmalle/launch/: DirectLauncherComponent.java  DirectLauncherSubcomponent.java  IndirectLauncherComponent.java  IndirectLauncherSubcomponent.java  JvmLauncher.java  Launcher.java  LauncherComponent.java  LifeCycleSignals.java  Privileges.java
wayland/src/main/resources/: jetty-logging.properties  jglm.properties
wayland/src/main/resources/html5/: wayland.js
wayland/src/test/resources/: logback.xml
(+1790 files in other folders)
